modified widoco conf

--- a/OnToology/ontology/medred.owl/documentation/index-en.html
+++ b/OnToology/ontology/medred.owl/documentation/index-en.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+I<!DOCTYPE html>
 <html prefix="dc: http://purl.org/dc/terms/ schema: http://schema.org/ prov: http://www.w3.org/ns/prov# foaf: http://xmlns.com/foaf/0.1/ owl: http://www.w3.org/2002/07/owl#">
 <head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
