--- a/OnToology/ontology/medred.owl/documentation/sections/overview-en.html
+++ b/OnToology/ontology/medred.owl/documentation/sections/overview-en.html
@@ -62,9 +62,20 @@
       <a href="#calculation" title="http://w3id.org/medred/medred#calculation">calculation</a>
    </li>
    <li>
+      <a href="#hasValue" title="http://w3id.org/medred/medred#hasValue">
+         <span>has value</span>
+      </a>
+   </li>
+   <li>
       <a href="#studyName" title="http://w3id.org/medred/medred#studyName">studyName</a>
    </li>
    <li>
       <a href="#varName" title="http://w3id.org/medred/medred#varName">varName</a>
+   </li>
+</ul><h4>Named Individuals</h4><ul class="hlist">
+   <li>
+      <a href="#" title="http://w3id.org/medred/medred#">
+         <span></span>
+      </a>
    </li>
 </ul>
