--- a/onto/medred/sections/overview-en.html
+++ b/onto/medred/sections/overview-en.html
@@ -24,6 +24,11 @@
       <a href="#ItemList" title="http://w3id.org/medred/medred#ItemList">ItemList</a>
    </li>
    <li>
+      <a href="#Observation" title="http://w3id.org/medred/medred#Observation">
+         <span>observation</span>
+      </a>
+   </li>
+   <li>
       <a href="#Operation" title="http://w3id.org/medred/medred#Operation">Operation</a>
    </li>
    <li>
@@ -57,14 +62,35 @@
    <li>
       <a href="#ofSection" title="http://w3id.org/medred/medred#ofSection">ofSection</a>
    </li>
+   <li>
+      <a href="#validationShape" title="http://w3id.org/medred/medred#validationShape">
+         <span>validation shape</span>
+      </a>
+   </li>
 </ul><h4>Data Properties</h4><ul class="hlist">
    <li>
       <a href="#calculation" title="http://w3id.org/medred/medred#calculation">calculation</a>
+   </li>
+   <li>
+      <a href="#dataValue" title="http://w3id.org/medred/medred#dataValue">
+         <span>data value</span>
+      </a>
+   </li>
+   <li>
+      <a href="#hasValue" title="http://w3id.org/medred/medred#hasValue">
+         <span>has value</span>
+      </a>
    </li>
    <li>
       <a href="#studyName" title="http://w3id.org/medred/medred#studyName">studyName</a>
    </li>
    <li>
       <a href="#varName" title="http://w3id.org/medred/medred#varName">varName</a>
+   </li>
+</ul><h4>Named Individuals</h4><ul class="hlist">
+   <li>
+      <a href="#" title="http://w3id.org/medred/medred#">
+         <span></span>
+      </a>
    </li>
 </ul>
