--- a/onto/medred/sections/introduction-en.html
+++ b/onto/medred/sections/introduction-en.html
@@ -1,5 +1,5 @@
 <h2 id="intro" class="list">Introduction <span class="backlink"> back to <a href="#toc">ToC</a></span></h2>
-<p>This is a place holder text for the introduction. The introduction should briefly describe the ontology, its motivation, state of the art and goals.</p>
+<p>Electronic Data Capture (EDC) solutions are progressively being adopted in clinical trials and studies, carried out by biomedical, pharmaceutical and health-care research teams. In this paper we present the MedRed Ontology, whose goal is to represent the metadata of the instruments that constitute these studies, using well-established standards, and reusing related vocabularies to describe validation rules, composability, and provenance. Furthermore, we have validated the ontology with existing clinical studies in the context of the MedRed project for data acquisition, as well as a collection of publicly available metadata of well-known studies. Finally, we have made the ontology available publicly following conventional guidelines.</p>
 <div id="namespacedeclarations">
 <h3 id="ns" class="list">Namespace declarations</h3>
 <div id="ns" align="center">
