--- a/onto/medred/sections/description-en.html
+++ b/onto/medred/sections/description-en.html
@@ -1,2 +1,3 @@
 I<h2 id="desc" class="list">MedRed ontology: medical data acquisition model: Description <span class="backlink"> back to <a href="#toc">ToC</a></span></h2>
 <p>This is a placeholder text for the description of your ontology. The description should include an explanation and a diagram explaining how the classes are related, examples of usage, etc.</p>
+<img src="https://github.com/jpcik/medred/blob/gh-pages/onto/medred/sections/Screen%20Shot%202017-04-25%20at%2012.09.01.png?raw=true"/>
