--- a/onto/medred/sections/overview-en.html
+++ b/onto/medred/sections/overview-en.html
@@ -3,6 +3,12 @@
 <h4>Classes</h4>
 <ul class="hlist">
    <li>
+      <a href="#Arm" title="http://w3id.org/medred/medred#Arm">Arm</a>
+   </li>
+   <li>
+      <a href="#ArmList" title="http://w3id.org/medred/medred#ArmList">ArmList</a>
+   </li>
+   <li>
       <a href="#CaseReportForm" title="http://w3id.org/medred/medred#CaseReportForm">CaseReportForm</a>
    </li>
    <li>
@@ -12,10 +18,16 @@
       <a href="#ChoiceList" title="http://w3id.org/medred/medred#ChoiceList">ChoiceList</a>
    </li>
    <li>
+      <a href="#EventList" title="http://w3id.org/medred/medred#EventList">EventList</a>
+   </li>
+   <li>
       <a href="#Information" title="http://w3id.org/medred/medred#Information">Information</a>
    </li>
    <li>
       <a href="#Instrument" title="http://w3id.org/medred/medred#Instrument">Instrument</a>
+   </li>
+   <li>
+      <a href="#InstrumentList" title="http://w3id.org/medred/medred#InstrumentList">InstrumentList</a>
    </li>
    <li>
       <a href="#Item" title="http://w3id.org/medred/medred#Item">Item</a>
@@ -24,9 +36,10 @@
       <a href="#ItemList" title="http://w3id.org/medred/medred#ItemList">ItemList</a>
    </li>
    <li>
-      <a href="#Observation" title="http://w3id.org/medred/medred#Observation">
-         <span>observation</span>
-      </a>
+      <a href="#LongitudinalStudy" title="http://w3id.org/medred/medred#LongitudinalStudy">LongitudinalStudy</a>
+   </li>
+   <li>
+      <a href="#Observation" title="http://w3id.org/medred/medred#Observation">Observation</a>
    </li>
    <li>
       <a href="#Operation" title="http://w3id.org/medred/medred#Operation">Operation</a>
@@ -43,43 +56,55 @@
    <li>
       <a href="#Study" title="http://w3id.org/medred/medred#Study">Study</a>
    </li>
-</ul><h4>Object Properties</h4><ul class="hlist">
    <li>
-      <a href="#choices" title="http://w3id.org/medred/medred#choices">choices</a>
+      <a href="#StudyEvent" title="http://w3id.org/medred/medred#StudyEvent">StudyEvent</a>
    </li>
+</ul><h4>Object Properties</h4><ul class="hlist">
    <li>
       <a href="#dataType" title="http://w3id.org/medred/medred#dataType">dataType</a>
    </li>
    <li>
-      <a href="#instrument" title="http://w3id.org/medred/medred#instrument">instrument</a>
+      <a href="#hasArms" title="http://w3id.org/medred/medred#hasArms">hasArms</a>
+   </li>
+   <li>
+      <a href="#hasChoices" title="http://w3id.org/medred/medred#hasChoices">hasChoices</a>
+   </li>
+   <li>
+      <a href="#hasInstruments" title="http://w3id.org/medred/medred#hasInstruments">hasInstruments</a>
+   </li>
+   <li>
+      <a href="#includedInStudy" title="http://w3id.org/medred/medred#includedInStudy">includedInStudy</a>
+   </li>
+   <li>
+      <a href="#includesEvents" title="http://w3id.org/medred/medred#includesEvents">includesEvents</a>
+   </li>
+   <li>
+      <a href="#includesInstrument" title="http://w3id.org/medred/medred#includesInstrument">includesInstrument</a>
+   </li>
+   <li>
+      <a href="#isEventOfArm" title="http://w3id.org/medred/medred#isEventOfArm">isEventOfArm</a>
+   </li>
+   <li>
+      <a href="#isItemOfInstrument" title="http://w3id.org/medred/medred#isItemOfInstrument">isItemofInstrument</a>
+   </li>
+   <li>
+      <a href="#isItemOfSection" title="http://w3id.org/medred/medred#isItemOfSection">isItemofSection</a>
    </li>
    <li>
       <a href="#items" title="http://w3id.org/medred/medred#items">items</a>
    </li>
    <li>
-      <a href="#ofInstrument" title="http://w3id.org/medred/medred#ofInstrument">ofInstrument</a>
-   </li>
-   <li>
-      <a href="#ofSection" title="http://w3id.org/medred/medred#ofSection">ofSection</a>
-   </li>
-   <li>
-      <a href="#validationShape" title="http://w3id.org/medred/medred#validationShape">
-         <span>validation shape</span>
-      </a>
+      <a href="#validationShape" title="http://w3id.org/medred/medred#validationShape">validationShape</a>
    </li>
 </ul><h4>Data Properties</h4><ul class="hlist">
    <li>
       <a href="#calculation" title="http://w3id.org/medred/medred#calculation">calculation</a>
    </li>
    <li>
-      <a href="#dataValue" title="http://w3id.org/medred/medred#dataValue">
-         <span>data value</span>
-      </a>
+      <a href="#dataValue" title="http://w3id.org/medred/medred#dataValue">dataValue</a>
    </li>
    <li>
-      <a href="#hasValue" title="http://w3id.org/medred/medred#hasValue">
-         <span>has value</span>
-      </a>
+      <a href="#hasValue" title="http://w3id.org/medred/medred#hasValue">hasValue</a>
    </li>
    <li>
       <a href="#studyName" title="http://w3id.org/medred/medred#studyName">studyName</a>
@@ -87,10 +112,3 @@
    <li>
       <a href="#varName" title="http://w3id.org/medred/medred#varName">varName</a>
    </li>
-</ul><h4>Named Individuals</h4><ul class="hlist">
-   <li>
-      <a href="#" title="http://w3id.org/medred/medred#">
-         <span></span>
-      </a>
-   </li>
-</ul>
