--- a/onto/medred/index-en.html
+++ b/onto/medred/index-en.html
@@ -56,18 +56,23 @@ function loadTOC(){
 <body>
 <div class="container"><div class="head">
 <div style="float:right">language <a href="index-en.html"><b>en</b></a> </div>
-<h1>MedRed ontology: medical data acquisition model</h1>
+<h1>MedRed Ontology: Representing Clinical Data Acquisition Metadata</h1>
 <dt>Revision:</dt>
-<dd>0.0.1</dd>
+<dd>1.0.1</dd>
 <dl><dt>Authors:</dt>
-<dd><a href="http://jeanpi.org">http://jeanpi.org</a></dd></dl>
+<dd><a href="http://w3id.org/people/jpcik/me">Jean-Paul Calbimonte</a></dd>
+<dd><a href="https://www.hevs.ch/en/minisites/projects-products/aislab/collaborateurs/research-assistant/dubosson-1762">Fabien Dubosson</a></dd>
+<dd><a href="https://www.hevs.ch/fr/rad-instituts/institut-sante/collaborateurs/professeure-hes/hilfiker-5183">Roger Hilfiker</a></dd>
+<dd><a href="https://www.hevs.ch/en/minisites/projects-products/aislab/collaborateurs/professor-uas/cotting-1588">Alexandre Cotting</a></dd>
+<dd><a href="https://www.hevs.ch/en/minisites/projects-products/aislab/collaborateurs/uas-professor/schumacher-1800">Michael Schumacher</a></dd>
+</dl>
 
 <dl><dt>Publisher:</dt>
-<dd><a href="http://aislab.hevs.ch/">http://aislab.hevs.ch/</a></dd></dl>
+<dd><a href="http://aislab.hevs.ch/">Applied Intelligent Systems Lab, e-Health Unit</a>, <a href="http://www.hevs.ch">University of Applied Sciences and Arts Western Switzerland, HES-SO Valais-Wallis</a></dd></dl>
 <dl><dt>Imported Ontologies:</dt>
 <dd><a href="http://rdf-vocabulary.ddialliance.org/discovery">http://rdf-vocabulary.ddialliance.org/discovery</a></dd><dd><a href="http://purl.org/net/p-plan#">http://purl.org/net/p-plan#</a></dd></dl>
 
-<dl><dt>Download serialization:</dt><dd><span><a href="ontology.n3" target="_blank"><img src="https://img.shields.io/badge/Format-N_Triples-blue.svg" alt="N-Triples"></img></a> </span><span><a href="ontology.xml" target="_blank"><img src="https://img.shields.io/badge/Format-RDF/XML-blue.svg" alt="RDF/XML"></img></a> </span><span><a href="ontology.ttl" target="_blank"><img src="https://img.shields.io/badge/Format-TTL-blue.svg" alt="TTL"></img></a> </span></dd></dl><dl><dt>License: </dt><dd><a href="http://purl.org/NET/rdflicense/cc-by4.0" target="_blank"><img src ="https://img.shields.io/badge/License-license name goes here-blue.svg" alt="http://purl.org/NET/rdflicense/cc-by4.0"></img></a>
+<dl><dt>Download serialization:</dt><dd><span><a href="ontology.n3" target="_blank"><img src="https://img.shields.io/badge/Format-N_Triples-blue.svg" alt="N-Triples"></img></a> </span><span><a href="ontology.xml" target="_blank"><img src="https://img.shields.io/badge/Format-RDF/XML-blue.svg" alt="RDF/XML"></img></a> </span><span><a href="ontology.ttl" target="_blank"><img src="https://img.shields.io/badge/Format-TTL-blue.svg" alt="TTL"></img></a> </span></dd></dl><dl><dt>License: </dt><dd><a href="http://purl.org/NET/rdflicense/cc-by4.0" target="_blank"><img src ="https://licensebuttons.net/l/by/4.0/80x15.png" alt="http://purl.org/NET/rdflicense/cc-by4.0"></img></a>
 </dd></dl><dl><a href="provenance/provenance-en.html" target="_blank">Provenance of this page</a></dl><hr/>
 </div>
 <div class="status">
